# rust-mobile-offline-sync

./: .gitignore  Cargo.toml  POST.md  README.md  rust-toolchain.toml
backend/: Cargo.toml
backend/src/: event_log.rs  lib.rs  server.rs
client-sdk/: Cargo.toml
client-sdk/src/: event_log.rs  ffi.rs  http.rs  item_service.rs  lib.rs  sync.rs  sync_runner.rs
mobile/ios/: build_rust.sh  project.yml
mobile/ios/OfflineSyncDemo/: OfflineSyncDemoApp.swift
shared/: Cargo.toml
shared/src/: core.rs  event_log.rs  item.rs  item_storage.rs  lib.rs  replica.rs
