[workspace]
resolver = "2"
members = ["shared", "client-sdk", "backend"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/rust-mobile-offline-sync"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
