[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Pure Rust domain + sync core. No platform bindings — the backend depends on it
# directly, and the client-sdk (mobile) wraps it with UniFFI.
[dependencies]
async-trait = "0.1.89"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.53.0", default-features = false, features = ["sync"] }
uuid.workspace = true
